@@ -66,7 +66,7 @@ Type 'q()' to quit R.
 > try(zz <- url("http://foo.bar", "r"))
 Error in url("http://foo.bar", "r") : unable to open connection
 In addition: Warning message:
-unable to resolve 'foo.bar'. 
+unable to resolve 'foo.bar'. in: url("http://foo.bar", "r")
 > 
 > # and via read.table, test http and ftp.
 > 
