@@ -1,6 +1,6 @@
 
-R version 2.5.0 Under development (unstable) (2006-12-18 r40257)
-Copyright (C) 2006 The R Foundation for Statistical Computing
+R version 2.5.0 Patched (2007-05-24 r41704)
+Copyright (C) 2007 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -56,7 +56,7 @@ Type 'q()' to quit R.
 [1] "#line 1"     "2+3"         "ls()"        "pi"          "# last line"
 [6] "5+6"        
 Warning message:
-incomplete final line found by readLines on 'testIO.R' 
+incomplete final line found by readLines on 'testIO.R' in: readLines("testIO.R") 
 > source("testIO.R", echo=TRUE)
 
 > #line 1
@@ -100,7 +100,7 @@ incomplete final line found by readLines on 'testIO.R'
 [1] "#line 1"     "2+3"         "ls()"        "pi"          "# last line"
 [6] "5+6"        
 Warning message:
-incomplete final line found by readLines on 'testIO.R' 
+incomplete final line found by readLines on 'testIO.R' in: readLines("testIO.R") 
 > source("testIO.R", echo=TRUE)
 
 > #line 1
@@ -123,7 +123,7 @@ incomplete final line found by readLines on 'testIO.R'
 > readLines("testIO.R")
 [1] "#line 1"     "2+3"         "ls()"        "pi"          "# last line"
 Warning message:
-incomplete final line found by readLines on 'testIO.R' 
+incomplete final line found by readLines on 'testIO.R' in: readLines("testIO.R") 
 > source("testIO.R", echo=TRUE)
 
 > #line 1
@@ -146,7 +146,7 @@ incomplete final line found by readLines on 'testIO.R'
 [1] "#line 1"     "2+3"         "ls()"        "pi"          "# last line"
 [6] "5+6"        
 Warning message:
-incomplete final line found by readLines on 'testIO.R' 
+incomplete final line found by readLines on 'testIO.R' in: readLines("testIO.R") 
 > source("testIO.R", echo=TRUE)
 
 > #line 1
