@@ -18,6 +18,9 @@ NEW FEATURES
     	specifiers for R version specific information as part of the
     	startup process.
 
+    o	C-level warning calls now print a more informative context,
+	as C-level errors have for a while.
+
 
 INSTALLATION
 
